dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/macsys.lisp)

AM_INIT_AUTOMAKE(maxima,5.9.0)

AC_ARG_ENABLE(clisp,[--enable-clisp                   Use clisp],
     	[case "${enableval}" in
       		yes) clisp=true ;;
       		no)  clisp=false ;;
		*) AC_MSG_ERROR(bad value ${enableval} for --enable-clisp) ;;
     	esac],
	[clisp=false])
AM_CONDITIONAL(CLISP, test x$clisp = xtrue)

AC_ARG_ENABLE(cmucl,[--enable-cmucl                   Use CMUCL],
     	[case "${enableval}" in
       		yes) cmucl=true ;;
       		no)  cmucl=false ;;
		*) AC_MSG_ERROR(bad value ${enableval} for --enable-cmucl) ;;
     	esac],
	[cmucl=false])
AM_CONDITIONAL(CMUCL, test x$cmucl = xtrue)

AC_ARG_ENABLE(gcl,[--enable-gcl                     Use GCL],
     	[case "${enableval}" in
       		yes) gcl=true ;;
       		no)  gcl=false ;;
		*) AC_MSG_ERROR(bad value ${enableval} for --enable-gcl) ;;
     	esac],
	[gcl=false])
AM_CONDITIONAL(GCL, test x$gcl = xtrue)

AC_ARG_WITH(default-lisp,
	[--with-default-lisp=<lisp>         Set default lisp implementation to <lisp>],
     	[case "${withval}" in
       		clisp)
			if test x"${clisp}" = xtrue ; then
				default_lisp=clisp
			else
				AC_MSG_ERROR(clisp not enabled)
			fi
			;;
		cmucl)
			if test x"${cmucl}" = xtrue ; then
				default_lisp=cmucl
			else
				AC_MSG_ERROR(cmucl not enabled)
			fi
			;;
		gcl)
			if test x"${gcl}" = xtrue ; then
				default_lisp=gcl
			else
				AC_MSG_ERROR(gcl not enabled)
			fi
			;;		
		*) 
			AC_MSG_ERROR(Unknown argument ${default_lisp} to --default_lisp) 
			;;
     	esac],
	[default_lisp=clisp])


AC_OUTPUT(Makefile src/Makefile src/maxima lisp-utils/Makefile)